--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+{% block styles %}
+  <link rel="stylesheet" href="{% static 'css/landing/main.css' %}">
+{% endblock %}
 {% block main %}
 <div class="hero">
   <div class="image-hero"></div>
