--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,8 @@
         {% else %}
           <link rel="stylesheet" href="{% static '/index.css' %}">
         {% endif %}
+        {% block styles %}
+        {% endblock %}
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
