--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
       <div class="anchor">CONVOCATORIAS</div>
       <div class="anchor">TORNEOS</div>
       <div class="anchor"><a href="{% url 'landing:ver_equipos' %}">EQUIPOS</a></div>
-      <div class="anchor">GALERIA</div>
+      <div class="anchor">GALERÍA</div>
       <div class="anchor"><a href="{% url 'landing:ver_organizadores' %}">ORGANIZADORES</a></div>
     </div>
   </div>
@@ -23,7 +23,7 @@
         <li><a href="#">CONVOCATORIAS</a></li>
         <li><a href="#">TORNEOS</a></li>
         <li><a href="#">EQUIPOS</a></li>
-        <li><a href="#">GALERIA</a></li>
+        <li><a href="#">GALERÍA</a></li>
         <li><a href="#">ORGANIZADORES</a></li>
   </ul>
 </div>
