--- a/torneo/templates/torneo/torneo_list.html
+++ b/torneo/templates/torneo/torneo_list.html
@@ -22,6 +22,10 @@
         <a href="{% url 'torneo:editar_torneo' Torneo.id %}">
            <i class="medium material-icons icon-blue">mode_edit</i>
          </a>
+         {% else %}
+         <a href="{% url 'torneo:editar_registro' Torneo.id %}">
+            <i class="medium material-icons icon-blue">date_range</i>
+          </a>
          {% endif %}
       </div>
     </li>
