--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -201,6 +201,10 @@ a {
   justify-content: space-between;
 }
 
+.wrap {
+  flex-wrap: wrap;
+}
+
 /* Footer */
 
 .footer {
@@ -312,113 +316,6 @@ a {
 .header > .container > .image-column > img {
   width: 230px;
   height: 230px;
-}
-
-
-
-
-
-/* Equipos */
-
-.team-detail > .container {
-  height: 100%;
-}
-
-.team-detail > .container > .card-list {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.campeonatos-ganados {
-  max-width: 100% !important;
-}
-
-.team-player {
-  max-width: 45% ;
-}
-
-.team-detail .team{
-  padding: 12px 24px 12px 24px;
-  height: 100%:
-}
-
-.campeonatos-ganados > .campeonato {
-  display: flex;
-  align-items: center;
-}
-
-.campeonatos-ganados .image-column {
-  margin-right: 24px;
-}
-
-.campeonatos-ganados .text-column > p {
-  margin: 0;
-}
-
-.team-detail .circle-icon {
-  width:50px;
-  height: 50px;
-  background-color: #F19800;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.team-detail .circle-icon > img {
-  max-height: 50%;
-}
-
-/* Partido */
-
-.match-content {
-  background-color: #fff;
-  padding-top: 4em;
-  padding-bottom: 6em;
-}
-
-.header .logo > img {
-  height:200px;
-  width: 200px;
-
-}
-
-.header .row {
-  flex-direction: row;
-}
-
-
-.header .logo {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.match-content > .container {
-  display: flex;
-}
-
-.match-content .team {
-  flex-grow: 1;
-}
-
-/* borrar color despues */
-.match-content  .team-name {
-  background-color: #F19800;
-  padding: 5px 12px 12px 24px;
-}
-
-.match-content .collection {
-  margin-top: -7px;
-}
-
-.match-content .field {
-  flex-grow: 3;
-  background-image: url("../static_media/field.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 75vh;
 }
 
 /* Mobile and tablet */
