--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
       <img class="logo" src="{% static 'static_media/logo-white.svg' %}" alt="logo-plidi" />
     </div>
     <div class="column anchors">
-      <div class="anchor">CONVOCATORIAS</div>
+      <div class="anchor"><a href="{% url 'landing:verTorneos' %}">CONVOCATORIAS</a></div>
       <div class="anchor">TORNEOS</div>
       <div class="anchor">EQUIPOS</div>
       <div class="anchor">GALERIA</div>
@@ -17,7 +17,7 @@
   <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
   <ul id="mobile-demo" class="sidenav">
         <li><a href="#">CONVOCATORIAS</a></li>
-        <li><a href="#">TORNEOS</a></li>
+        <li><a href="{% url 'landing:verTorneos' %}">TORNEOS</a></li>
         <li><a href="#">EQUIPOS</a></li>
         <li><a href="#">GALERIA</a></li>
         <li><a href="#">ORGANIZADORES</a></li>
