--- a/torneo/templates/torneo/pdf_template.html
+++ b/torneo/templates/torneo/pdf_template.html
@@ -2,10 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+     <meta charset="utf-8">
+        <title>Plan Libélula Desarrollo Integral</title>
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/css/materialize.min.css">
+
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 </head>
 <body>
-<h1>{{ torneo.nombre }}</h1>
+<h2>Plan Libelula Desarollo Integral</h2>
+<br>
+<h6>Informacion de la jornada {{ jornada.jornada }} del torneo {{ torneo.nombre }}</h6>
+<br>
+<table>
+ <tr>
+    <th>Equipo Local</th>
+    <th>Equipo Visitante</th>
+    <th>Arbitro</th>
+    <th>Fecha</th>
+    <th>Hora</th>
+    <th>Cancha</th>
+    <th>Codigo de acceso</th>
+ </tr>
+{% for partido in jornada.partido_set.all %}
+    <tr>
+        <td>{{ partido.equipo_local }}</td>
+        <td>{{ partido.equipo_visitante }}</td>
+        <td>{{ partido.arbitro }}</td>
+        <td>{{ partido.fecha }}</td>
+        <td>{{ partido.hora }}</td>
+        <td >{{ partido.cancha }}</td>
+        <td >{{ partido.id }}</td>
+    </tr>
+
+
+{% endfor %}
+</table>
+
+
+
+
+
 </body>
 </html>
