--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,10 +5,10 @@
       <a href="/"><img class="logo" src="{% static 'static_media/logo-white.svg' %}" alt="logo-plidi" /></a>
     </div>
     <div class="column anchors">
-
       <div class="anchor"><a href="{% url 'landing:verTorneos' %}">CONVOCATORIAS</a></div>
-      <div class="anchor"><a href="{% url 'landing:ver_torneos' %}">TORNEOS</div>
       <div class="anchor"><a href="{% url 'landing:ver_equipos' %}">EQUIPOS</a></div>
+      <div class="anchor"><a href="{% url 'landing:ver_torneos' %}">TORNEOS</a></div>
+
       <div class="anchor">GALERÍA</div>
       <div class="anchor"><a href="{% url 'landing:ver_organizadores' %}">ORGANIZADORES</a></div>
     </div>
