--- a/static/css/landing/detalle-equipo.css
+++ b/static/css/landing/detalle-equipo.css
@@ -54,5 +54,26 @@
 .card-image > img {
   width: 300px;
   height: 300px;
+}
 
+.collection-item > .big {
+  height: 60px !important;
+  width: 60px !important;
+}
+
+.collection > .big {
+  padding-left: 85px !important;
+}
+
+.align-items {
+  display: flex;
+  align-items: center;
+}
+
+.no-top {
+  top: inherit !important;
+}
+
+.top {
+  top: 23px !important;
 }
