--- a/landing/templates/landing/detalle_equipo.html
+++ b/landing/templates/landing/detalle_equipo.html
@@ -22,7 +22,7 @@
   <div class="container">
     <h3>Estadísticas</h3>
     <div class="card-list flex space-between">
-      <div class="card team-player">
+      <div class="card">
         <span class="card-title"><strong>MEJOR GOLEADORA </strong></span>
         <ul class="collection">
           <li class="collection-item avatar big align-items">
@@ -42,7 +42,7 @@
           </li>
         </ul>
       </div>
-      <div class="card team-player">
+      <div class="card">
         <span class="card-title"><strong>MÁS FALTAS COMETIDAS </strong></span>
         <ul class="collection">
           <li class="collection-item avatar big align-items">
@@ -62,7 +62,7 @@
           </li>
         </ul>
       </div>
-      <div class="card team-player">
+      <div class="card">
         <span class="card-title"><strong>MÁS AMONESTACIONES </strong></span>
         <ul class="collection">
           <li class="collection-item avatar big align-items">
@@ -82,7 +82,7 @@
           </li>
         </ul>
       </div>
-      <div class="card team-player">
+      <div class="card">
         <span class="card-title"><strong>MÁS EXPULSIONES </strong></span>
         <ul class="collection">
           <li class="collection-item avatar big align-items">
@@ -118,9 +118,9 @@
       </div>
     </div>
     <h3>Jugadoras</h3>
-    <div class="jugadoras wrap flex space-between">
+    <div class="jugadoras card-container wrap flex space-between">
       {% for jugadora in jugadoras_equipo %}
-      <div class="card">
+      <div class="card team-player">
         <div class="card-image">
           {% if jugadora.Imagen %}
             <img src="{{ jugadora.Imagen.url }}" alt="{{jugadora.Nombre}} imagen" class="circle"/>
