--- a/torneo/templates/torneo/pdf_template.html
+++ b/torneo/templates/torneo/pdf_template.html
@@ -18,6 +18,7 @@
 <br>
 <h6>Informacion de la jornada {{ jornada.jornada }} del torneo {{ torneo.nombre }}</h6>
 <br>
+<h8>Accede al sitio: {{ request }} </h8>
 <table>
  <tr>
     <th>Equipo Local</th>
