--- a/landing/templates/landing/detalle_torneo.html
+++ b/landing/templates/landing/detalle_torneo.html
@@ -58,6 +58,57 @@
         <strong>DG:</strong> Diferencia de goles
       </p>
       </br>
+      <hr/>
+      <div class="row">
+        <h3>Calendadio por Jornadas</h3>
+        {% for jornada in jornadas %}
+        <div class="col">
+            <a href="#{{jornada.id}}" onclick="carga_partidos({{jornada.id}})"><h6>{{jornada.jornada}}</h6></a>
+        </div>
+        {% endfor %}
+      </div>
+      <hr />
+      <div id="partidos">
+      </div>
   </div>
 </div>
 {% endblock %}
+
+{% block scripts %}
+    {{ block.super }}
+    <script src=" https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            var csrftoken = $.cookie('csrftoken');
+            function csrfSafeMethod(method) {
+            // these HTTP methods do not require CSRF protection
+                return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+            }
+            $.ajaxSetup({
+                beforeSend: function(xhr, settings) {
+                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                    }
+                }
+            });
+            $('.modal').modal() ;
+        });
+
+        function carga_partidos(jornada){
+
+                var url = '{% url "landing:carga_partidos" %}';
+
+                var jornada = jornada
+
+                $.post(url,
+                {
+                    jornada:jornada
+                })
+                .done(function( data ) {
+                    $('#partidos').html(data);
+                });
+                return false;
+        };
+    </script>
+{% endblock %}
+
