--- a/landing/templates/landing/lista_torneos.html
+++ b/landing/templates/landing/lista_torneos.html
@@ -11,6 +11,7 @@
   <div class="container">
     <ul class="collection">
       {% for torneo in torneos %}
+      {% if not torneo.activo %}
       <a href="{% url 'landing:detalle_torneo' torneo.id %}">
         <li class="collection-item avatar listado">
           <span class="title">{{torneo.nombre}}</span>
@@ -18,6 +19,7 @@
           <p>Categoría: {{ torneo.categoria }}</p>
         </li>
       </a>
+      {% endif %}
       {% endfor %}
     </ul>
   </div>
