--- a/landing/templates/landing/detalle_equipo.html
+++ b/landing/templates/landing/detalle_equipo.html
@@ -89,7 +89,7 @@
                 {% else %}
                   <img src="{% static 'static_media/default.jpg' %}" alt="{{tam.jugadora__Nombre}} imagen" class="circle big"/>
                 {% endif %}
-                <h6><strong>{{tam.jugadora__Nombre}} {{jugadora__Apellido}}</strong></h6>
+                <h6><strong>{{tam.jugadora__Nombre}} {{tam.jugadora__Apellido}}</strong></h6>
                 <h6 class="secondary-content top">{{tam.tam}}</h6>
               </li>
             {% else %}
@@ -136,17 +136,19 @@
       </div>
       <div class="card campeonatos-ganados">
         <span class="card-title"><strong>CAMPEONATOS</strong></span>
-        <div class="campeonato">
-          <div class="image-column">
-            <div class="circle-icon circle">
-              <img src="{% static 'static_media/trophy.svg' %}" />
+        {% for torneo in torneos_ganados %}
+          <div class="campeonato">
+            <div class="image-column">
+              <div class="circle-icon circle">
+                <img src="{% static 'static_media/trophy.svg' %}" />
+              </div>
             </div>
-          </div>
-          <div class="text-column">
-            <p>Libelulas<p>
-            <span class="small">2018</p>
-          </div>
-        </div>
+            <div class="text-column">
+              <p><strong>{{torneo.torneo__nombre}}</strong><p>
+                <span class="small">{{torneo.torneo__fechaInicio | date:"o"}}</p>
+                </div>
+              </div>
+        {% endfor %}
       </div>
     </div>
     <h3>Jugadoras</h3>
