--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -6,6 +6,7 @@
 {% block main %}
 <div class="hero">
   <div class="image-hero"></div>
+  <div class="cover"></div>
   <div class="container">
     <div class="text">
       <h1>PLAN LIBÉLULA DESARROLLO INTEGRAL</h1>
@@ -81,16 +82,21 @@
        <div class="container">
          <img class="icon" src="{% static 'static_media/mission.svg' %}" alt="mission-icon" />
          <h4>Misión</h4>
-         <p>You his, fish face tree that gathering spirit itself also, may evening night in fowl fourth beast likeness moving fly from from itself fly good seasons beast all grass him.</p>
+         <p>Enseñar y guiar a niñas y/o jóvencitas a manejar sus emociones y capacidades con el objetivo de modificar y crear una nueva generación que lleve a la sociedad mexicana a un nuevo nivel.</p>
        </div>
      </div>
      <div class="column">
        <div class="container">
          <img class="icon vision" src="{% static 'static_media/star.svg' %}" alt="vision-icon" />
          <h4>Visión</h4>
-         <p>You his, fish face tree that gathering spirit itself also, may evening night in fowl fourth beast likeness moving fly from from itself fly good seasons beast all grass him.</p>
+         <p>Formar niñas y/o jovencitas que generen acciones trascendentes en el desarrollo social y/o deportivo, la confianza en sí misma, el valor de la palabra, el compromiso, la honestidad y la ayuda al prójimo</p>
        </div>
      </div>
+   </div>
+   <div class="centered-text">
+     <h3>Beneficios de estar afiliado a FEmexFut</h3>
+     <p>El principal beneficio que ofrece la Femexfut al estar afiliados los o las futbolistas es jugar protegidos en cuanto a las lesiones que se pudieran dar en los partidos de fútbol, también tener participación en eliminatorias estatales para poder representar al estado en campeonatos nacionales donde al ganar este derecho se les proporciona hospedaje y alimentación. También cuentan con el registro en la pagina de la Femexfut donde aparece liga - equipo y jugador. Hay un apartado en donde se encuentran todos los datos del jugador o jugadora.</p>
+     <div class="button secondary-button">Ver documento oficial</div>
    </div>
  </div>
 </div>
