--- a/static/css/landing/detalle-equipo.css
+++ b/static/css/landing/detalle-equipo.css
@@ -85,3 +85,8 @@
     align-items: center;
   }
 }
+
+.header > .image-header {
+  background-image: url("../../static_media/equipos.jpg");
+  background-position: 50% -0;
+}
