--- a/static/css/landing/team-list.css
+++ b/static/css/landing/team-list.css
@@ -19,3 +19,8 @@
   width: 300px;
   overflow: hidden;
 }
+
+.header > .image-header {
+  background-image: url("../../static_media/equipos.jpg");
+  background-position: 50% -0;
+}
