--- a/landing/templates/landing/detalle_equipo.html
+++ b/landing/templates/landing/detalle_equipo.html
@@ -6,6 +6,7 @@
 {% block main %}
 <div class="header">
   <div class="image-header"></div>
+  <div class="cover"></div>
   <div class="container">
     <div class="image-column">
       <img src={{equipo.logo.url}} alt="{{equipo.nombre}} logo" class="circle"/>
