--- a/landing/templates/landing/lista_equipos.html
+++ b/landing/templates/landing/lista_equipos.html
@@ -6,6 +6,7 @@
 {% block main %}
 <div class="header small-header">
   <div class="image-header"></div>
+  <div class="cover"></div>
   <div class="container">
     <h2>Equipos</h2>
   </div>
