--- a/landing/templates/landing/lista_torneos.html
+++ b/landing/templates/landing/lista_torneos.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
+{% block styles %}
+  <link rel="stylesheet" href="{% static 'css/landing/torneo.css' %}">
+{% endblock %}
 {% block main %}
 <div class="header small-header">
   <div class="image-header"></div>
+  <div class="cover"></div>
   <div class="container">
     <h2>Torneos</h2>
   </div>
