--- a/landing/templates/landing/organizadores.html
+++ b/landing/templates/landing/organizadores.html
@@ -6,6 +6,7 @@
 {% block main %}
   <div class="header small-header">
     <div class="image-header"></div>
+    <div class="cover"></div>
     <div class="container">
       <h2>Organizadores</h2>
     </div>
