--- a/landing/templates/landing/partido.html
+++ b/landing/templates/landing/partido.html
@@ -6,6 +6,7 @@
 {% block main %}
 <div class="header">
   <div class="image-header"></div>
+  <div class="cover"></div>
   <div class="container">
     <div class="team row">
       <div class="logo">
