--- a/landing/templates/landing/torneos.html
+++ b/landing/templates/landing/torneos.html
@@ -7,6 +7,7 @@
 
 <div class="header small-header">
   <div class="image-header"></div>
+  <div class="cover"></div>
   <div class="container">
     <h2>Convocatorias</h2>
   </div>
