--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -152,6 +152,15 @@ body {
 
 /* Generic */
 
+.cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(303deg, rgba(62, 69, 100, 0.47), #2c1d3b);
+  z-index: -1;
+  opacity: 0.7;
+}
+
 .white {
   color: #fff !important;
 }
@@ -301,7 +310,6 @@ a {
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
-  background-image: url("../static_media/soccer.jpg");
   z-index:-1;
   background-position: bottom;
 }
