--- a/landing/templates/landing/lista_equipos.html
+++ b/landing/templates/landing/lista_equipos.html
@@ -12,7 +12,7 @@
   </div>
 </div>
 <div class="content team-list">
-  <div class="container">
+  <div class="container wrap">
     {% for equipo in equipos %}
     <div class="card">
       <a href="{% url 'landing:detalle_equipo' equipo.id %}">
