--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -26,56 +26,28 @@
  <div class="container">
    <h2>Próximos juegos</h2>
    <div class="card-container">
+       {% for p in partidos %}
      <div class="card match">
        <div class="card-image waves-effect waves-block waves-light">
          <div class="container">
-           <img class="team" src="{% static 'static_media/USA.png' %}">
+           <img class="team" src="{{ p.equipo_local.logo.url }}">
            <div class="vs-container">
              <div class="circle vs-circle">VS</div>
            </div>
-           <img class="team" src="{% static 'static_media/logo2.png' %}">
+           <img class="team" src="{{ p.equipo_visitante.logo.url }}">
          </div>
        </div>
        <div class="card-content">
-         <p>Jueves, Marzo 12 - 12:30 AM</p>
-         <p>Cancha Querétaro 2000</p>
+          <p>{{p.jornada.torneo.nombre }}</p>
+         <p>{{p.fecha}}</p>
+         <p>{{p.hora|time:"P"}}</p>
+         <p>Cancha: {{p.cancha}}</p>
        </div>
      </div>
-
-     <div class="card match">
-       <div class="card-image waves-effect waves-block waves-light">
-         <div class="container">
-           <img class="team" src="{% static 'static_media/USA.png' %}">
-           <div class="vs-container">
-             <div class="circle vs-circle">VS</div>
-           </div>
-           <img class="team" src="{% static 'static_media/logo2.png' %}">
-         </div>
-       </div>
-       <div class="card-content">
-         <p>Jueves, Marzo 12 - 12:30 AM</p>
-         <p>Cancha Querétaro 2000</p>
-       </div>
-     </div>
-
-     <div class="card match">
-       <div class="card-image waves-effect waves-block waves-light">
-         <div class="container">
-           <img class="team" src="{% static 'static_media/USA.png' %}">
-           <div class="vs-container">
-             <div class="circle vs-circle">VS</div>
-           </div>
-           <img class="team" src="{% static 'static_media/logo2.png' %}">
-         </div>
-       </div>
-       <div class="card-content">
-         <p>Jueves, Marzo 12 - 12:30 AM</p>
-         <p>Cancha Querétaro 2000</p>
-       </div>
-     </div>
+        {% endfor %}
    </div>
    <div class="cta-container">
-     <div class="button secondary-button">Ver todos los juegos</div>
+     <div class="button secondary-button"><a href="{% url 'torneo:lista_torneos' %}">Ver todos los torneos</a></div>
    </div>
    <div class="mision-vision">
      <div class="column">
