--- a/static/css/landing/team-list.css
+++ b/static/css/landing/team-list.css
@@ -24,3 +24,9 @@
   background-image: url("../../static_media/equipos.jpg");
   background-position: 50% -0;
 }
+
+@media (min-width: 360px) and (max-width: 1060px) {
+  .container {
+    flex-wrap: wrap;
+  }
+}
