Terminar implementación y pruebas

--- a/torneo/templates/torneo/lista_eventos.html
+++ b/torneo/templates/torneo/lista_eventos.html
@@ -1,4 +1,4 @@
-<div class="container" id="eventos">
+
   <h5>Goles</h5>
   <br>
   {% if goles %}
@@ -16,7 +16,7 @@
       <td>{{ gol.cantidad }}</td>
       <td>
         <a href="#" data-target="delete" data-form="" class="delete-button">
-          <i class="small material-icons icon-red">delete</i>
+          <i class="small material-icons icon-red" onclick="elimina_evento({{gol.id}},1)">delete</i>
         </a>
       </td>
     </tr>
@@ -43,7 +43,7 @@
       <td>{{ tarjeta.cantidad }}</td>
       <td>
         <a href="#" data-target="delete" data-form="" class="delete-button">
-          <i class="small material-icons icon-red">delete</i>
+          <i class="small material-icons icon-red" onclick="elimina_evento({{tarjeta.id}},2)">delete</i>
         </a>
       </td>
     </tr>
@@ -68,7 +68,7 @@
       <td>{{ tarjeta.jugadora }}</td>
       <td>
         <a href="#" data-target="delete" data-form="" class="delete-button">
-          <i class="small material-icons icon-red">delete</i>
+          <i class="small material-icons icon-red" onclick="elimina_evento({{tarjeta.id}},3)">delete</i>
         </a>
       </td>
     </tr>
@@ -92,7 +92,7 @@
     <tr>
       <td>{{ tarjeta.jugadora }}</td>
       <td>
-        <a href="#" data-target="delete" data-form="" class="delete-button">
+        <a href="#" data-target="delete" data-form="" class="delete-button" onclick="elimina_evento({{tarjeta.id}},4)">
           <i class="small material-icons icon-red">delete</i>
         </a>
       </td>
@@ -102,4 +102,3 @@
   {% else %}
     No hay tarjetas registradas.
   {% endif %}
-</div>
