--- a/torneo/templates/torneo/registrar_eventos.html
+++ b/torneo/templates/torneo/registrar_eventos.html
@@ -2,13 +2,13 @@
 {% load static %}
 {% block main %}
 <div class="title-container">
-  <h2 class="admin-title">Registrar Cédula - Partido {{partido}}</h2>
+  <h2 class="admin-title center">Registrar Cédula</h2>
 </div>
 <br>
 <div class="container">
   <div class="row">
-    <div class="col s5 input-field">
-      <select>
+    <div class="col s12 l5 input-field">
+      <select id="evento">
         <option value="" disabled selected>Seleccione..</option>
         <option value="1">Gol</option>
         <option value="2">Tarjeta Amarilla</option>
@@ -17,8 +17,8 @@
       </select>
       <label>Evento</label>
     </div>
-    <div class="col s5 input-field">
-      <select>
+    <div class="col s12 l5 input-field">
+      <select id="jugadora">
         <option value="" disabled selected>Seleccione..</option>
         {% for asistencia in asistencias %}
           <option value="{{asistencia.jugadora.id}}">{{asistencia.jugadora.Nombre}} {{asistencia.jugadora.Apellido}}</option>
@@ -26,19 +26,90 @@
       </select>
       <label>Jugadora</label>
     </div>
-    <div class="col s2 input-field">
+    <div class="col s12 l2 input-field">
       <input id="cantidad" type="number" class="validate" min="1">
       <label for="cantidad">Cantidad</label>
     </div>
   </div>
   <div class="col s12">
     <div class="container-button">
-      <button class="submit" >Guardar</button>
+      <button onclick="agregar_evento()" class="submit">Guardar</button>
     </div>
   </div>
 </div>
 <br>
+<div id="eventos" class="container">
+  {% include 'torneo/lista_eventos.html'%}
+</div>
 
-{% include 'torneo/lista_eventos.html'%}
+{% endblock %}
+{% block scripts %}
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/js/materialize.min.js"></script>
+<script src=" https://cdn.jsdelivr.net/jquery.cookie/1.4.1/jquery.cookie.min.js "></script>
+<script>
+    $(document).ready(function(){
+        var csrftoken = $.cookie('csrftoken');
+        function csrfSafeMethod(method) {
+        // these HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+        $.ajaxSetup({
+            beforeSend: function(xhr, settings) {
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        });
 
+        $('select').formSelect();
+    });
+
+    function agregar_evento(){
+
+            var url = '{% url "torneo:registrar_eventos" partido.id %}';
+
+            var evento = $('#evento').val();
+
+            var jugadora = $('#jugadora').val();
+
+            var cantidad = $('#cantidad').val();
+
+            $.post(url,
+            {
+                evento:evento,
+                jugadora:jugadora,
+                cantidad:cantidad
+            })
+            .done(function( data ) {
+                $('#eventos').html(data);
+                $('#cantidad').val(0);
+                $('select').formSelect();
+            });
+
+            return false;
+    };
+
+    function elimina_evento(id,evento){
+
+            var url = '{% url "torneo:eliminar_evento" partido.id %}';
+
+            var evento = evento;
+
+            var id = id;
+
+            $.post(url,
+            {
+                evento:evento,
+                id:id
+            })
+            .done(function( data ) {
+                $('#eventos').html(data);
+                $('#cantidad').val(0);
+                $('select').formSelect();
+            });
+
+            return false;
+    };
+</script>
 {% endblock %}
