--- a/static/css/landing/partido.css
+++ b/static/css/landing/partido.css
@@ -6,10 +6,9 @@
   padding-bottom: 6em;
 }
 
-.header .logo > img {
-  height:200px;
+.header .logo>img {
+  height: 200px;
   width: 200px;
-
 }
 
 .header .row {
@@ -21,22 +20,21 @@
   letter-spacing: 0.5px;
 }
 
-.torneo > h5 {
+.torneo>h5 {
   text-transform: uppercase;
 }
-
 
 .header .logo {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width:auto !important;
+  width: auto !important;
   padding-right: 24px;
   padding-left: 24px;
 }
 
 .team {
-  width:35%;
+  width: 35%;
 }
 
 .team-name {
@@ -50,25 +48,25 @@
   margin-top: -0px;
 }
 
-.collection-item > .item-container{
+.collection-item>.item-container {
   align-items: center;
-  color: rgba(3,27,78,.7);
+  color: rgba(3, 27, 78, .7);
 }
 
-.collection-item:nth-of-type(2n){
+.collection-item:nth-of-type(2n) {
   background-color: #f7f8fb !important;
 }
 
-.collection-item:hover{
+.collection-item:hover {
   background-color: #e0e0e0 !important;
 }
 
 .num {
-  width:10%;
+  width: 10%;
 }
 
 .nombre {
-  width:60%;
+  width: 60%;
 }
 
 .pos {
@@ -76,20 +74,19 @@
 }
 
 .icons {
-  width:20%;
+  width: 20%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-.collection-item > .item-container > .pos {
+.collection-item>.item-container>.pos {
   text-transform: uppercase;
   text-align: center;
 }
 
 .center-container {
   flex-grow: 1;
-
 }
 
 .field {
@@ -143,6 +140,7 @@
 .shirt-visitante {
   background-image: url('../../static_media/shirtv.svg');
 }
+
 .tarjeta {
   height: 25px;
   width: 15px;
@@ -170,17 +168,16 @@
 }
 
 @media (min-width: 360px) and (max-width: 1060px) {
-  .content > .container {
+  .content>.container {
     flex-direction: column;
   }
   .team-container {
     width: 100%;
   }
-  .team-container > .local {
+  .team-container>.local {
     margin-bottom: 24px;
   }
-
-  .team-container > .visitante {
+  .team-container>.visitante {
     margin-top: 24px;
   }
   .field {
@@ -193,15 +190,12 @@
     padding-top: 3em;
     padding-bottom: 3em;
   }
-
-  .team > .logo {
+  .team>.logo {
     align-self: center;
   }
-
-  .team > .logo > img {
+  .team>.logo>img {
     display: none;
   }
-
   .header .row {
     flex-direction: column;
   }
@@ -212,7 +206,7 @@
     flex-direction: column;
   }
   .header .container .logo>img {
-    height:100px;
+    height: 100px;
     width: 100px;
   }
   .header .container .logo {
