--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,10 +21,10 @@
     <div class="logo-container">
       <li><a href="/"><img class="logo" src="{% static 'static_media/logo-white.svg' %}" alt="logo-plidi" /></a></li>
     </div>
-        <li><a href="{% url 'landing:verTorneos' %}">CONVOCATORIAS</a></li>
-        <li><a href="{% url 'landing:ver_torneos' %}">TORNEOS</a></li>
-        <li><a href="{% url 'landing:ver_equipos' %}">EQUIPOS</a></li>
-        <li><a href="#">GALERÍA</a></li>
-        <li><a href="{% url 'landing:ver_organizadores' %}">ORGANIZADORES</a></li>
+        <li><a class="anchor" href="{% url 'landing:verTorneos' %}">CONVOCATORIAS</a></li>
+        <li><a class="anchor" href="{% url 'landing:ver_torneos' %}">TORNEOS</a></li>
+        <li><a class="anchor" href="{% url 'landing:ver_equipos' %}">EQUIPOS</a></li>
+        <li><a class="anchor" href="#">GALERÍA</a></li>
+        <li><a class="anchor" href="{% url 'landing:ver_organizadores' %}">ORGANIZADORES</a></li>
   </ul>
 </div>
