--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -28,7 +28,7 @@
    <div class="card-container">
        {% for p in partidos %}
      <div class="card match">
-       <div class="card-image waves-effect waves-block waves-light">
+       <div class="card-image">
          <div class="container">
            <img class="team" src="{{ p.equipo_local.logo.url }}">
            <div class="vs-container">
