--- a/landing/templates/landing/organizadores.html
+++ b/landing/templates/landing/organizadores.html
@@ -14,7 +14,7 @@
   <div class="content">
     <div class="container flex space-between">
       <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
+        <div class="card-image">
           <img class="person" src="{% static 'static_media/Yo.jpg' %}">
         </div>
         <div class="card-content">
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
+        <div class="card-image">
           <img class="person" src="{% static 'static_media/Marcela.jpg' %}">
         </div>
         <div class="card-content">
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="card-image waves-effect waves-block waves-light">
+        <div class="card-image">
           <img class="person" src="{% static 'static_media/Lulu.jpg' %}">
         </div>
         <div class="card-content">
