--- a/static/css/landing/torneo.css
+++ b/static/css/landing/torneo.css
@@ -2,3 +2,12 @@
   background-image: url("../../static_media/Torneos.jpg");
   background-position: center;
 }
+
+td img {
+  margin-right: 12px;
+}
+
+.button {
+  margin-top: 12px;
+  padding: 6px 6px 6px 6px
+}
