--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,13 +2,12 @@
 <div class="navbar" id="navbar">
   <div class="container">
     <div class="column">
-      <a href="/"><img class="logo" src="{% static 'static_media/logo-white.svg' %}" alt="logo-plidi" /></a>
+      <a href="/"><div class="logo"></div></a>
     </div>
     <div class="column anchors">
       <div class="anchor"><a href="{% url 'landing:verTorneos' %}">CONVOCATORIAS</a></div>
       <div class="anchor"><a href="{% url 'landing:ver_equipos' %}">EQUIPOS</a></div>
       <div class="anchor"><a href="{% url 'landing:ver_torneos' %}">TORNEOS</a></div>
-
       <div class="anchor">GALERÍA</div>
       <div class="anchor"><a href="{% url 'landing:ver_organizadores' %}">ORGANIZADORES</a></div>
     </div>
