--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Plan Libélula Desarrollo Integral</title>
+        <link rel="shortcut icon" href="{% static 'favicon/favicon.ico' %}"/>
         <!--Import Google Icon Font-->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!--Import materialize.css-->
