--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,8 +11,9 @@
         <li><a href="{% url 'equipo:lista_equipos' %}">EQUIPO</a></li>
         <li><a href="{% url 'jugadora:ver_jugadoras' %}">JUGADORAS</a></li>
         <li><a href="{% url 'torneo:lista_torneos' %}">TORNEOS</a></li>
+        {% if user.is_staff %}
         <li><a href="{% url 'administrador:lista_administrador' %}">ADMINISTRADORES</a></li>
-        <li><a href="#">LIGAS</a></li>
+        {% endif %}
         <li><a href="{% url 'logout' %}"><i class="material-icons">exit_to_app</i></a></li>
       </ul>
       </div>
@@ -24,7 +25,10 @@
         <li><a href="{% url 'equipo:lista_equipos' %}">EQUIPO</a></li>
         <li><a href="{% url 'jugadora:ver_jugadoras' %}">JUGADORAS</a></li>
         <li><a href="{% url 'torneo:lista_torneos' %}">TORNEOS</a></li>
+        {% if user.is_staff %}
         <li><a href="{% url 'administrador:lista_administrador' %}">ADMINISTRADORES</a></li>
-        <li><a href="#">LIGAS</a></li>
+        {% endif %}
         <li><a href="{% url 'logout' %}"><i class="material-icons">exit_to_app</i></a></li>
   </ul>
+{% load static %}
+  
