cambios en modelos y templates

--- a/jugadora/templates/jugadora/agregar_jugadora.html
+++ b/jugadora/templates/jugadora/agregar_jugadora.html
@@ -63,6 +63,22 @@
       </p>
       {{ form.Posicion.errors }}
 
+      <p>
+        <label>
+          {{ form.NumPoliza.label_tag }}
+        </label>
+        {{ form.NumPoliza }}
+      </p>
+      {{ form.NumPoliza.errors }}
+
+      <p>
+        <label>
+          {{ form.NUI.label_tag }}
+        </label>
+        {{ form.NUI }}
+      </p>
+      {{ form.NUI.errors }}
+
       {% if equipo == '' %}
           <p>
               <label>
