--- a/jugadora/templates/jugadora/jugadora_detail.html
+++ b/jugadora/templates/jugadora/jugadora_detail.html
@@ -39,6 +39,22 @@
         <input disabled value="{{jugadora.get_Posicion_display}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
         <label for="disabled">Posicion de la Jugadora</label>
       </div>
+
+        <div class="input-field col s12 m6">
+            <input disabled value="{{jugadora.FechaDeAfiliacion}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
+            <label for="disabled">Fecha De Afiliacion</label>
+        </div>
+
+        <div class="input-field col s12 m6">
+            <input disabled value="{{jugadora.NumPoliza}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
+            <label for="disabled">Numero de Póliza</label>
+        </div>
+
+        <div class="input-field col s12 m6">
+            <input disabled value="{{jugadora.NUI}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
+            <label for="disabled">NUI</label>
+        </div>
+
       <div class="input-field col s12">
         <input disabled value="{{jugadora.Notas}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
         <label for="disabled">Notas</label>
@@ -51,6 +67,9 @@
   </div>
 </div>
     </div>
+
+
+
 
 
   {% endblock %}
