--- a/torneo/templates/torneo/editar_registro.html
+++ b/torneo/templates/torneo/editar_registro.html
@@ -3,7 +3,7 @@
 {% block main %}
 
 <div class="title-container">
-    <h2 class="admin-title">Roles de juego</h2>
+    <h2 class="admin-title">Roles de juego {{ torneo.nombre }}</h2>
 </div>
 <div class="container">
     <div class="row">
