--- a/torneo/templates/torneo/lista_partidos.html
+++ b/torneo/templates/torneo/lista_partidos.html
@@ -1,4 +1,5 @@
-<h4 class="center-align">Jornada {{jornada.jornada}}</h4>
+<h4 class="center-align">Jornada {{jornada.jornada}}</h4><h6> <a href='{% url "torneo:mandar_codigoCedula" id_jornada jornada.id %}'><i class="material-icons icon-blue">print</i>Imprimir Claves de Acceso</a></h6>
+
 <br>
 {% for partido in partidos %}
   <div class="row valign-wrapper">
@@ -24,10 +25,9 @@
       <br>
       <br>
       <a href='{% url "torneo:editar_partido" partido.id %}'><i class="material-icons icon-blue">mode_edit</i></a>
+       
         <br>
-      <a href='{% url "torneo:mandar_codigoCedula" id_jornada jornada.id %}'><i class="material-icons icon-blue">print</i></a>
-        <br>
-      <a href='{% url "torneo:mandar_cedula" partido.id %}'><i class="material-icons">print</i></a>
+      <a href='{% url "torneo:mandar_cedula" partido.id %}'><i class="material-icons">print</i>Cédula</a>
     </div>
     <div class="col s5">
       <div class="row right-align">
