--- a/equipo/templates/equipo/equipo_list.html
+++ b/equipo/templates/equipo/equipo_list.html
@@ -6,7 +6,8 @@
   <h2 class="admin-title">Equipos</h2>
 </div>
 <div class="container">
-  <ul class="collection">
+  <input id="searchbox" type="text" placeholder="Búsqueda" />
+  <ul id="friendlist" class="collection">
     {% for Equipo in object_list %}
     <li class="collection-item avatar">
       <img src="{{ Equipo.logo.url }}" alt="" class="circle">
@@ -32,4 +33,26 @@
   </div>
 </div>
 
+{% endblock %}
+{% block scripts %}
+{{ block.super }}
+
+<script>
+
+jQuery.expr[':'].Contains = function(a, i, m) {
+    return jQuery(a).text().toUpperCase().indexOf(m[3].toUpperCase()) >= 0;
+};
+
+$(function() {
+    $('#searchbox').on('keyup', function() {
+        var w = $(this).val();
+        if (w) {
+            $('#friendlist li').hide();
+            $('#friendlist li:Contains('+w+')').show();
+        } else {
+            $('#friendlist li').show();                  
+        }
+    });
+});
+</script>
 {% endblock %}
