--- a/torneo/templates/torneo/torneo_list.html
+++ b/torneo/templates/torneo/torneo_list.html
@@ -6,7 +6,8 @@
   <h2 class="admin-title">Torneos</h2>
 </div>
 <div class="container">
-  <ul class="collection">
+  <input id="searchbox" type="text" placeholder="Búsqueda" />
+  <ul id="friendlist" class="collection">
     {% for Torneo in lista_torneos %}
     <li class="collection-item avatar fix">
       <span class="title"><a href="{% url 'torneo:detalle_torneo' Torneo.id %}">{{ Torneo.nombre }}</a></span>
@@ -71,5 +72,23 @@
             var botones = '<a href="#cancelar" class="modal-action modal-close cancel cancel-delete">Cancelar</a>  <a href="cerrar_registro/' + id + '" class="modal-action modal-close delete-color confirmar-eliminar">Aceptar</a>' ;
             $(".modal-footer").html(botones) ;
         });
+    </script>
+    <script>
+
+    jQuery.expr[':'].Contains = function(a, i, m) {
+        return jQuery(a).text().toUpperCase().indexOf(m[3].toUpperCase()) >= 0;
+    };
+    
+    $(function() {
+        $('#searchbox').on('keyup', function() {
+            var w = $(this).val();
+            if (w) {
+                $('#friendlist li').hide();
+                $('#friendlist li:Contains('+w+')').show();
+            } else {
+                $('#friendlist li').show();                  
+            }
+        });
+    });
     </script>
 {% endblock %}
