--- a/static/css/landing/convocatorias.css
+++ b/static/css/landing/convocatorias.css
@@ -19,3 +19,13 @@ i {
   background-image: url("../../static_media/Torneos.jpg");
   background-position: center;
 }
+
+@media (min-width: 360px) and (max-width: 767px) {
+  .image-header {
+    top: 0;
+  }
+  .cover {
+    top: 0;
+    height: 120vh;
+  }
+}
