--- a/static/css/landing/detalle-equipo.css
+++ b/static/css/landing/detalle-equipo.css
@@ -81,6 +81,13 @@
 }
 
 @media (min-width: 360px) and (max-width: 767px) {
+  .image-header {
+    top: 0;
+  }
+  .cover {
+    top: 0;
+    height: 120vh;
+  }
   .header > .container {
     flex-direction: column;
     align-items: center;
