--- a/templates/base.html
+++ b/templates/base.html
@@ -86,6 +86,8 @@
         </script>
         {% if request.resolver_match.app_name == 'landing' %}
           <script type="text/javascript" src="{% static '/js/landing.js' %}"></script>
+          <script src="https://cdn.rawgit.com/dropbox/zxcvbn/v1.0/zxcvbn.js"></script>
+          <script src="https://cdn.rawgit.com/kimmobrunfeldt/progressbar.js/1.0.0/dist/progressbar.js"></script>
         {% else %}
           <script type="text/javascript" src="{% static '/index.js' %}"></script>
         {% endif %}
