--- a/equipo/templates/equipo/agregar_equipo.html
+++ b/equipo/templates/equipo/agregar_equipo.html
@@ -5,7 +5,7 @@
 <div class="title-container">
   <h2>Agregar Equipo<h2>
 </div>
-<form  class="container flex" action="{% url 'equipo:agregar_equipo' %}" method="POST" enctype="multipart/form-data">
+<form  class="container flex" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="image-column">
     <div class="image-circle upload">
